test/golden96/{piCL.{SL}}.6840925804160914882.golden
INITIALPATH:7:28: error:
    • parse error on input `/' in haskell expression
    • In the quasi-quotation: [fmt|{pi:.{/}}|]
  |
7 | main = putStrLn [fmt|{pi:.{/}}|]
  |                            ^